test_regress/t/t_tri_compass_bad.out
%Error: t/t_tri_compass_bad.v:16:12: Unsupported: tristate in top-level IO: '__pinNumber1'
                                   : ... In instance t
   sub sub(i, o);
           ^
%Error: Exiting due to
